[tool.poetry]
name = "mpi4py-example"
version = "0.1.0"
description = ""
authors = ["Carl Pearson <cwpears@sandia.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
mpi4py = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
